# Lion-BOT-list

./: README.md  conn.py  database.db  main.py  pyproject.toml
sql.create/: init_db.py  schema.sql
structure/commands/: add_bot.py  config_bot.py  list_bot.py  remove.py  review.py  verification.py
structure/events/: on_bot_join.py
