[tool.poetry]
name = "Lion BOT ©"
version = "0.1.0"
description = "An application for Discord with many utilities, functions and commands for your enjoyment."
authors = ["Felipe Savazi <dev@felipesavazi.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
discord = "^1.7.3"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
